<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 ABC Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Generic Strings  -->
    <string name="settings_advanced_title">Advanced</string>

    <!-- HW Keys -->
    <string name="hwkeys_armory_title">Hardware keys</string>
        <string name="hwkeys_title">HWKeys Rebinding</string>
        <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
        <!-- Hardware keys -->
        <string name="hardware_keys_home_key_title">Home button</string>
        <string name="hardware_keys_menu_key_title">Menu button</string>
        <string name="hardware_keys_back_key_title">Back button</string>
        <string name="hardware_keys_short_press_title">Short press action</string>
        <string name="hardware_keys_long_press_title">Long press action</string>
        <string name="hardware_keys_double_tap_title">Double tap action</string>
        <string name="hardware_keys_action_nothing">No action</string>
        <string name="hardware_keys_action_menu">Open/close menu</string>
        <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
        <string name="hardware_keys_action_search">Search assistant</string>
        <string name="hardware_keys_action_voice_search">Voice search</string>
        <string name="hardware_keys_action_in_app_search">In-app search</string>
        <string name="hardware_keys_action_launch_camera">Launch camera</string>
        <string name="hardware_keys_action_sleep">Turn screen off</string>
        <string name="hardware_keys_action_last_app">Last app</string>
        <string name="hardware_keys_action_split_screen">Split screen</string>
        <string name="hardware_keys_action_screenshot">Screenshot</string>
        <string name="hardware_keys_action_partial_screenshot">Partial screenshot</string>
        <string name="hardware_keys_action_pip">PiP</string>
        <!-- Kill app long press back -->
        <string name="kill_app_longpress_back">Kill app back button</string>
        <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
        <!-- Buttons backlight timeout -->
        <string name="backlight_timeout_title">Buttons backlight timeout</string>
        <string name="backlight_timeout_on">Enabled always</string>
        <string name="backlight_timeout_3s">3 sec</string>
        <string name="backlight_timeout_default">5 sec (default)</string>
        <string name="backlight_timeout_10s">10 sec</string>
        <string name="backlight_timeout_15s">15 sec</string>
        <string name="backlight_timeout_20s">20 sec</string>
        <string name="backlight_timeout_30s">30 sec</string>
        <!-- Enable keys backlight-->
        <string name="button_brightness_title">Backlight</string>
        <!-- Enabble HW keys -->
        <string name="enable_hw_keys_title">Enable hardware keys</string>


    <!-- NavBar -->
    <string name="navbar_armory_title">Navigation Bar</string>
        <string name="double_tap_sleep_navbar">Double tap to sleep on navbar</string>
        <string name="navigation_bar_ime_button_title">Show IME navigation bar button</string>
        <string name="navigation_bar_ime_button_summary">Input switcher in navigation bar</string>
        <string name="navigation_bar_show_title">Show navigation bar</string>
        <string name="navigation_bar_show_summary">Force enable navigation bar</string>
        <string name="hardware_keys_disable_title">Disable keys</string>
        <string name="hardware_keys_disable_summary">Force disable hardware keys</string>

    <!-- Power Menu -->
    <string name="powermenu_armory_title">Power Menu</string>
        <string name="powermenu_power">Power</string>
        <string name="powermenu_restart">Restart</string>
        <string name="powermenu_restart_recovery">Advanced restart</string>
        <string name="powermenu_airplane">Airplane</string>
        <string name="powermenu_settings">Settings</string>
        <string name="powermenu_lockdown">Lock Down</string>
        <string name="powermenu_soundpanel">Sound Panel</string>
        <string name="powermenu_users">Users</string>

    <!-- Lockscreen -->
    <string name="lockscreen_armory_title">LockScreen</string>
        <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
        <!-- Lockscreen battery info indicator  -->
        <string name="lockscreen_battery_info_title">Battery info</string>
        <string name="lockscreen_battery_info_summary">Display negotiated charger max current-voltage and battery temperature on lockscreen while charging</string>

    <!-- QuickSettings and Notification Drawer -->
    <string name="drawer_armory_title">Notification Drawer</string>
        <string name="quick_pulldown_title">Right handed quick pulldown</string>
        <!-- QS rows and columns -->
        <string name="qs_rows_columns_title">Rows and Columns</string>
        <string name="qs_rows_portrait_title">Tiles Rows on Portrait</string>
        <string name="qs_rows_landscape_title">Tiles Rows on Landscape</string>
        <string name="qs_columns_portrait_title">Tiles Columns on Portrait</string>
        <string name="qs_columns_landscape_title">Tiles Columns on Landscape</string>
        <!-- Custom Header Images -->
        <string name="status_bar_custom_header_title">Enable</string>
        <string name="header_provider_disabled">Disabled</string>
        <string name="custom_header_title">Custom header image</string>
        <string name="daylight_header_pack_title">Header image pack</string>
        <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
        <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
        <string name="unit_percent">\u0025</string>
        <string name="static_header_provider" translatable="false">static</string>
        <string name="daylight_header_provider" translatable="false">daylight</string>
        <string name="static_header_provider_title">Static</string>
        <string name="daylight_header_provider_title">Dynamic</string>
        <string name="custom_header_provider_title">Header provider</string>
        <string name="custom_header_browse_title">Browse installed headers</string>
        <string name="custom_header_browse_summary">Click on any image to use for static mode</string>
        <string name="custom_header_browse_summary_new">Browse all available header packages</string>
        <string name="custom_header_pick_title">Select header image</string>
        <string name="custom_header_pick_summary">Select an image to use for static mode</string>
        <string name="style_enabled_summary">Custom header image is ON</string>
        <string name="style_disabled_summary">Custom header image is OFF</string>
    
    <!-- USB Connection -->
    <string name="usb_armory_title">USB Interface</string>
         <!-- Wake on Plug -->
        <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
        <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
         <!-- Vibrate on Plug -->
        <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
        <string name="vibration_on_charge_state_changed_summary">Vibrate when connecting or disconnecting a power source</string>

    <!-- StatusBar -->
    <string name="statusbar_armory_title">Status Bar</string>
        <string name="double_tap_sleep_statusbar">Double tap to sleep on statusbar</string>
        <!-- IME Switch -->
        <string name="status_bar_ime_notification_title">Show IME notification</string>
        <string name="status_bar_ime_notification_summary">If navigation bar is not available</string>
        <!-- Net monitor -->
        <string name="network_traffic_state_title">Network traffic</string>
        <string name="network_traffic_state_summary">Show net activity in statusbar</string>
        <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>

</resources>
